--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html manifest="">
+
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
 
-    <title>jakub</title>
+    <title>Falcon ExtJS</title>
 
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
@@ -15,8 +16,8 @@
         // use these tags here or even add custom tags. These can be used by platform
         // filters in your manifest or by platformConfig expressions in your app.
         //
-        Ext.beforeLoad = function (tags) {
-            var s = location.search,  // the query string (ex "?foo=1&bar")
+        Ext.beforeLoad = function(tags) {
+            var s = location.search, // the query string (ex "?foo=1&bar")
                 profile;
 
             // For testing look for "?classic" or "?modern" in the URL to override
@@ -24,11 +25,9 @@
             //
             if (s.match(/\bclassic\b/)) {
                 profile = 'classic';
-            }
-            else if (s.match(/\bmodern\b/)) {
+            } else if (s.match(/\bmodern\b/)) {
                 profile = 'modern';
-            }
-            else {
+            } else {
                 profile = tags.desktop ? 'classic' : 'modern';
                 //profile = tags.phone ? 'modern' : 'classic';
             }
@@ -39,7 +38,7 @@
             // any data is pulled from it.
             //
             //return function (manifest) {
-                // peek at / modify the manifest object
+            // peek at / modify the manifest object
             //};
         };
     </script>
@@ -48,5 +47,7 @@
     <script id="microloader" data-app="5486c4d0-59f6-4dca-89a2-bc7d24aa69cd" type="text/javascript" src="bootstrap.js"></script>
 
 </head>
+
 <body></body>
+
 </html>
